[gd_scene load_steps=8 format=3 uid="uid://114trb5kklu0"]

[ext_resource type="Texture2D" uid="uid://dh3mlfs6d0uyb" path="res://sprites/spritesheet.png" id="1_3insr"]
[ext_resource type="Script" path="res://scenes/numpad/numpad_number.gd" id="2_sq4dd"]
[ext_resource type="Theme" uid="uid://ivvnre0jtvlo" path="res://main_theme.tres" id="3_r306k"]
[ext_resource type="PackedScene" uid="uid://d4ahxdiuplehv" path="res://scenes/click_player/click_player.tscn" id="4_p6705"]

[sub_resource type="AtlasTexture" id="AtlasTexture_s1nmo"]
atlas = ExtResource("1_3insr")
region = Rect2(168, 150, 69, 66)

[sub_resource type="AtlasTexture" id="AtlasTexture_wn1iq"]
atlas = ExtResource("1_3insr")
region = Rect2(240, 150, 69, 66)

[sub_resource type="LabelSettings" id="LabelSettings_a304f"]
font_size = 14
font_color = Color(0.270588, 0.270588, 0.270588, 1)

[node name="1" type="TextureButton"]
offset_left = 2.0
offset_right = 71.0
offset_bottom = 66.0
texture_normal = SubResource("AtlasTexture_s1nmo")
texture_pressed = SubResource("AtlasTexture_wn1iq")
script = ExtResource("2_sq4dd")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 11.0
offset_top = 8.0
offset_right = 59.0
offset_bottom = 49.0
theme = ExtResource("3_r306k")
text = "CLEAR"
label_settings = SubResource("LabelSettings_a304f")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClickPlayer" parent="." instance=ExtResource("4_p6705")]

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_down" from="." to="ClickPlayer" method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="button_up" from="." to="ClickPlayer" method="_on_button_up"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
